force-app/main/default/objects/student001__c/student001__c.object-meta.xml
<CustomObject>
    <label>student001</label>
    <nameField>
        <label>student001 Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Students01</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>