force-app/main/default/objects/student001__c/fields/discount_requested__c.field-meta.xml
<CustomField>
    <fullName>discount_requested__c</fullName>
    <label>discount requested</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>