force-app/main/default/objects/student001__c/fields/Father_aadhar_number__c.field-meta.xml
<CustomField>
    <fullName>Father_aadhar_number__c</fullName>
    <label>Father aadhar number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>