force-app/main/default/objects/student001__c/fields/Father_s_Aadhar_number__c.field-meta.xml
<CustomField>
    <fullName>Father_s_Aadhar_number__c</fullName>
    <label>Father&apos;s Aadhar number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>